yaml/was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - image: 164134553042.dkr.ecr.ap-northeast-2.amazonaws.com/anaconda:was.V1
        imagePullPolicy: Always
        name: was
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 125m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
