yaml/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: 164134553042.dkr.ecr.ap-northeast-2.amazonaws.com/anaconda:web.V2
        name:  web
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 125m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
