yaml/alb-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: anaconda
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
