yaml/nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ClusterIP: 172.10.10.10
  selector:
    app: was
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
